--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/maps.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/login-register.css" type="text/css" />
+
     <link rel="icon" type="image/ico" href="/images/map.ico" />
     <link
       rel="stylesheet"
@@ -30,10 +32,14 @@
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Rubik:ital,wght@0,300;0,500;1,300;1,500&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="/scripts/favourite.js"></script>
   </head>
   <body>
     <%- include('partials/_header') %>
     <div class="pageTitle">
+      <h1>Create Account</h1>
+
       <form id="register-form" method="POST" action="/register">
         <div class="form-group">
           <input
@@ -72,7 +78,9 @@
           <label for="img">Select image:</label>
           <input type="file" id="img" name="img" accept="image/*" />
         </div> -->
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary rounded-pill">
+          Submit
+        </button>
       </form>
     </div>
   </body>
