style the new map form

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -39,7 +39,7 @@
         <div class="profile-header-views mb-3">
           <ul class="nav justify-content-center">
             <li class="nav-item nav-link">
-              <h4 id="my-maps">My Maps</h4>
+              <h4 id="my-maps" class="active">My Maps</h4>
             </li>
             <li class="nav-item nav-link">
               <h4 id="my-favourites">My Favourites</h4>
