--- a/styles/maps-new.scss
+++ b/styles/maps-new.scss
@@ -3,9 +3,20 @@ main {
   margin: auto;
 
   .map-new {
+    width: 100%;
     margin: auto;
     padding: 1em;
-
+    border: rgba(146, 146, 146, 0.185) 1px solid;
+    border-radius: 9px;
+    form {
+      display: flex;
+      flex-direction: column;
+      margin: 1rem auto;
+      width: 100%;
+      button.btn {
+        align-self: center;
+      }
+    }
   }
 
 }
