--- a/styles/users.scss
+++ b/styles/users.scss
@@ -80,13 +80,9 @@ main {
   display: none;
 }
 
-// #owner-maps-container {
-// }
-
-// #contribution-maps-container {
-// }
-
-
+.active {
+  color: #D36135;
+}
 
 @media only screen and (min-width: 1024px) {
   main {
