--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -72,8 +72,8 @@
               <!-- <div><%= point.title %></div> -->
               <td>
                 <div class="marker-info">
-                  <img src="<%= point.image %>" />
-                  <h4><%= point.title %></h4>
+                  <img class="markerImg" src="<%= point.image %>" />
+                  <h4 class="markerH4"><%= point.title %></h4>
                 </div>
                 <p><%= point.address %></p>
                 <small><%= point.descr %></small>
