--- a/styles/maps-new.scss
+++ b/styles/maps-new.scss
@@ -13,10 +13,29 @@ main {
       flex-direction: column;
       margin: 1rem auto;
       width: 100%;
+
+      div.form-group {
+        display: flex;
+        width: 90%;
+      }
+
       button.btn {
         align-self: center;
       }
     }
   }
 
+}
+
+@media only screen and (min-width: 1024px) {
+  .map-new {
+    form {
+      align-items: flex-end;
+      div {
+        .form-control {
+          width: 50%;
+        }
+      }
+    }
+  }
 }
