--- a/views/new.ejs
+++ b/views/new.ejs
@@ -33,13 +33,13 @@
       <h1 class="pageTitle">Create New Map</h1>
       <div class="map-new shadow-sm p-3 mb-5 bg-white rounded">
         <form action="/maps/new" method="POST">
-          <div class="mb-3">
+          <div class="mb-3 form-group">
             <label for="map-title" class="col-3">Map Title</label>
-            <input type="text" name="map-title" placeholder="Map Name" class="col-6"/>
+            <input type="text" name="map-title" placeholder="Map Name" class=" form-control"/>
           </div>
-          <div class="mb-3">
+          <div class="mb-3 form-group">
             <label for="map-category" class="col-3">Category</label>
-            <select name="map-category" id="map-category">
+            <select name="map-category" id="map-category" class=" form-control">
               <option value="" disabled >Please Select a Category...</option>
               <option value="City">City</option>
               <option value="Food">Food</option>
@@ -48,35 +48,35 @@
               <option value="Other">Other</option>
             </select>
           </div>
-          <div class="mb-3">
+          <div class="mb-3 form-group">
             <label for="map-description" class="col-3">Description</label>
             <textarea
               name="map-description"
               id="map-description"
               rows="3"
               placeholder="Map Description"
-              class="col-6"
+              class=" form-control"
             ></textarea>
           </div>
-          <div class="mb-3">
+          <div class="mb-3 form-group">
             <label for="address" class="col-3">Starting Address</label>
             <input
               type="text"
               name="address"
               placeholder="1 yonge street, Toronto"
-              class="col-6"
+              class=" form-control"
             />
           </div>
-          <div class="mb-3">
+          <div class="mb-3 form-group">
             <label for="map-img-url" class="col-3">Thumbnail Photo URL</label>
             <input
               type="text"
               name="map-img-url"
               placeholder="Map thumbnail url"
-              class="col-6"
+              class=" form-control"
             />
           </div>
-          <button type="submit" class="btn btn-primary col-6">Create Map</button>
+          <button type="submit" class="btn btn-primary ">Create Map</button>
         </form>
       </div>
     </main>
