add texture to all views

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -15,7 +15,10 @@ header.partial {
     // font-size: 1.2rem;
   }
 }
-
+body {
+  background-color: #b3d781;
+  background-image: url("https://www.transparenttextures.com/patterns/groovepaper.png");
+}
 .pageTitle {
   margin-top: 100px;
   font-family: "Rubik", sans-serif;
