--- a/styles/login-register.scss
+++ b/styles/login-register.scss
@@ -1,3 +1,7 @@
+body {
+  background-color: #b3d781;
+  background-image: url("https://www.transparenttextures.com/patterns/groovepaper.png");
+}
 .pageTitle {
   display: flex;
   flex-direction: column;
