--- a/styles/maps-new.scss
+++ b/styles/maps-new.scss
@@ -1,3 +1,7 @@
+body {
+  background-color: #b3d781;
+  background-image: url("https://www.transparenttextures.com/patterns/groovepaper.png");
+}
 main {
   width: 90%;
   margin: auto;
@@ -24,7 +28,6 @@ main {
       }
     }
   }
-
 }
 
 @media only screen and (min-width: 1024px) {
