--- a/styles/maps.scss
+++ b/styles/maps.scss
@@ -1,3 +1,7 @@
+body {
+  background-color: #b3d781;
+  background-image: url("https://www.transparenttextures.com/patterns/groovepaper.png");
+}
 h1.pageTitle {
   text-align: center;
   padding-bottom: 14px;
