add margins to inner elements of each map

--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -56,7 +56,7 @@
                 <a class="map-creator" href="/maps"><%= map.name %></a>
               </h2>
             </div>
-            <p><%= map.description %></p>
+            <!-- <p><%= map.description %></p> -->
             <div class="footer">
               <button
                 class="favMap"
