--- a/styles/maps.scss
+++ b/styles/maps.scss
@@ -12,7 +12,7 @@ h1.pageTitle {
   flex-direction: column;
   align-items: center;
   .map-view {
-    width: 50%;
+    width: 75%;
     .map-element:hover {
       box-shadow: 1px 1px 1px 1px #c6cbe1;
     }
@@ -74,9 +74,11 @@ h1.pageTitle {
           background-color: mediumturquoise;
           font-size: 1.5em;
           margin-bottom: 5px;
+          margin-left: 20px;
           .fa-heart {
             color: rgba(247, 50, 1, 0.482);
             border: 0px;
+            margin-bottom: 5px;
           }
           .fa-heart:hover {
             color: rgb(247, 50, 1);
@@ -92,6 +94,7 @@ h1.pageTitle {
           width: fit-content;
           height: fit-content;
           background-color: rgba(0, 139, 139, 0.454);
+          margin-right: 20px;
         }
       }
       .mapID,
