change map thubnail width to align better

--- a/styles/maps.scss
+++ b/styles/maps.scss
@@ -52,7 +52,7 @@ h1.pageTitle {
         }
         .imgContainer {
           margin-right: 1em;
-          width: 250px;
+          width: 75%;
           border: rgba(146, 146, 146, 0.185) 5px solid;
           border-radius: 5px;
 
