change color for the fav button

--- a/styles/maps.scss
+++ b/styles/maps.scss
@@ -76,7 +76,7 @@ h1.pageTitle {
           width: 42px;
           border: 2px solid cadetblue;
           border-radius: 50%;
-          background-color: mediumturquoise;
+          background-color: rgba(179, 215, 129, 1);
           font-size: 1.5em;
           margin-bottom: 5px;
           margin-left: 20px;
