Autofill Edit Marker/Point based on previous

--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -84,7 +84,7 @@
                     <p class="markerAddress"><%= point.address %></p>
                   </div>
                 </div>
-                <small><%= point.descr %></small>
+                <small class="markerDesc"><%= point.descr %></small>
                 <% if (userID) { %>
                 <div>
                   <!-- EDIT POINT FORM -->
