--- a/styles/users.scss
+++ b/styles/users.scss
@@ -33,8 +33,12 @@ main {
       padding: 1em;
     }
 
+    .profile-map:hover {
+      box-shadow: 1px 1px 1px 1px #c6cbe1;
+    }
+
     .profile-map {
-      border: black 1px solid;
+      border: rgba(146, 146, 146, 0.185) 1px solid;
       border-radius: 8px;
       width: 100%;
       overflow: hidden;
