--- a/styles/maps.scss
+++ b/styles/maps.scss
@@ -74,7 +74,7 @@ h1.pageTitle {
         justify-content: space-between;
         .favMap {
           width: 42px;
-          border: 2px solid cadetblue;
+          border: 2px solid rgba(179, 215, 129, 1);
           border-radius: 50%;
           background-color: rgba(179, 215, 129, 1);
           font-size: 1.5em;
