--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,11 +4,14 @@
       <a href="/maps" id="wiki-logo">WikiMaps</a>
       <div class="main-navigation">
         <% if (user) { %>
-        <a href="/users/<%= user %>/maps">My Maps</a>
-        <a href="/maps/new">New Map</a>
+        <!-- <a href="/users/<%= user %>/maps">My Maps</a> -->
+        <a class="new-map-text" href="/maps/new">New Map</a>
+        <a class="new-map-symbol" href="/maps/new">+</a>
         <% } else { %>
-        <a href="#">My Maps</a>
-        <a href="#">New Map</a>
+        <!-- <a href="#">My Maps</a> -->
+        <a class="new-map-text" href="#">New Map +</a>
+        <a class="new-map-symbol" href="#"> &#10133; </a>
+
         <% } %>
       </div>
     </div>
