Minor styling changes to mapsView and gave some padding to map description in user profile

--- a/styles/users.scss
+++ b/styles/users.scss
@@ -50,6 +50,9 @@ main {
       .profile-map-content {
         width: 75%;
         padding: 1em;
+        p {
+          padding: 1em;
+        }
       }
       .profile-map-btns {
         width: 60%;
