--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -63,7 +63,7 @@
           <label for="markerTitle">Title</label>
           <input name="markerTitle" />
           <label for="markerDesc">Description</label>
-          <textarea name="markerDesc" maxlength="100"></textarea>
+          <textarea name="markerDesc"></textarea>
           <label for="img">Location Image URL</label>
           <input id="marker-img" name="img" type="text" />
           <button class="btn btn-primary">Add Location</button>
