--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -68,7 +68,7 @@
                     <%= ownerMap.category %>
                   </small>
                 </header>
-                <%= ownerMap.description %>
+                <p><%= ownerMap.description %></p>
               </div>
               <div class="profile-map-btns">
                 <a class="btn btn-primary" href="/maps/<%= ownerMap.id %>"
