change logout btn to pill

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -31,7 +31,10 @@
           action="/logout"
           class="form-inline"
         >
-          <button type="submit" class="btn btn-outline-danger my-2 my-sm-0">
+          <button
+            type="submit"
+            class="btn btn-outline-danger my-2 my-sm-0 rounded-pill"
+          >
             Logout
           </button>
         </form>
