--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -76,9 +76,16 @@
             <% for (const point of points) { %>
             <tr>
               <!-- <div><%= point.title %></div> -->
-              <td class='markerTd'>
+              <td class="markerTd">
                 <div class="marker-info">
+                  <% if (point.image) { %>
                   <img class="markerImg" src="<%= point.image %>" />
+                  <% } else { %>
+                  <img
+                    class="markerImg"
+                    src="https://images.unsplash.com/photo-1553547358-e8a4ee2dcfeb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80"
+                  />
+                  <% } %>
                   <div class="markerBP">
                     <h4 class="markerH4"><%= point.title %></h4>
                     <p class="markerAddress"><%= point.address %></p>
