--- a/styles/map-viewer.scss
+++ b/styles/map-viewer.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #B3D781;
-  background-image: url('https://www.transparenttextures.com/patterns/groovepaper.png');
+  background-color: #b3d781;
+  background-image: url("https://www.transparenttextures.com/patterns/groovepaper.png");
 }
 
 h2.pageTitle {
@@ -19,7 +19,9 @@ h2.pageTitle {
   #map-viewport {
     width: 80%;
     height: 500px;
-    border: 3px solid cadetblue;
+
+    border: rgba(146, 146, 146, 0.185) 1px solid;
+    border-radius: 9px;
     margin-bottom: 1em;
     .markerInfo {
       display: flex;
@@ -40,7 +42,8 @@ h2.pageTitle {
     width: 80%;
     margin-bottom: 1em;
     button {
-      border: 2px solid cadetblue;
+      border: rgba(146, 146, 146, 0.185) 1px solid;
+      border-radius: 9px;
       border-radius: 50%;
       font-size: 1.5em;
       color: #244751;
@@ -74,7 +77,8 @@ h2.pageTitle {
   .location-form {
     display: none;
     width: 80%;
-    border: 3px solid cadetblue;
+    border: rgba(146, 146, 146, 0.185) 1px solid;
+    border-radius: 9px;
     margin-bottom: 1em;
     padding: 1em;
     form {
@@ -100,14 +104,15 @@ h2.pageTitle {
     cursor: pointer;
   }
   .markerH4:hover {
-    color:rgb(100, 179, 11);
+    color: rgb(100, 179, 11);
     cursor: pointer;
   }
 
   aside {
     width: 80%;
     height: 400px;
-    border: 3px solid cadetblue;
+    border: rgba(146, 146, 146, 0.185) 1px solid;
+    border-radius: 9px;
     overflow: scroll;
 
     tbody {
@@ -146,7 +151,6 @@ h2.pageTitle {
         overflow: scroll;
         font-size: 1.25vw;
       }
-
     }
   }
 }
@@ -157,12 +161,8 @@ h2.pageTitle {
   display: none;
 }
 
-
 @media only screen and (min-width: 992px) {
-
-
   div.markerBP {
     margin-right: 50px;
   }
-
 }
