remove + when the user is not auth

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,8 +9,8 @@
         <a class="new-map-symbol" href="/maps/new">+</a>
         <% } else { %>
         <!-- <a href="#">My Maps</a> -->
-        <a class="new-map-text" href="#">New Map +</a>
-        <a class="new-map-symbol" href="#"> &#10133; </a>
+        <a class="new-map-text" href="#">New Map</a>
+        <a class="new-map-symbol" href="#">+</a>
 
         <% } %>
       </div>
