add more seeds and fix some containers

--- a/styles/users.scss
+++ b/styles/users.scss
@@ -111,7 +111,7 @@ main {
           header {
             width: 30%;
           }
-          div {
+          p {
             width: 70%;
           }
         }
